--- a/public/index.html
+++ b/public/index.html
@@ -2,107 +2,106 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Blokz Reflex - Menu</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to right, #121212, #1e1e1e);
-      font-family: 'Segoe UI', sans-serif;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .menu {
-      background: #2a2a2a;
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px #000;
-      text-align: center;
-      width: 90%;
-      max-width: 400px;
-    }
-
-    input, select, button {
-      width: 90%;
-      padding: 10px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 8px;
-      font-size: 1rem;
-    }
-
-    button {
-      background: #4CAF50;
-      color: white;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    button:hover {
-      background: #45a049;
-    }
-
-    .instructions {
-      text-align: left;
-      font-size: 0.9rem;
-      margin-top: 20px;
-      background: #1c1c1c;
-      padding: 10px;
-      border-radius: 10px;
-    }
-
-    .hidden {
-      display: none;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Blokz Reflex - Connexion</title>
 </head>
 <body>
-  <div class="menu">
-    <h2>🎮 Blokz Reflex</h2>
-    
-    <input type="text" id="username" placeholder="Entre ton pseudo" />
-    <select id="difficulty">
-      <option value="">Choisis une difficulté</option>
-      <option value="easy">Facile</option>
-      <option value="medium">Moyen</option>
-      <option value="hard">Impossible</option>
-    </select>
-    <button onclick="startGame()">Prêt</button>
+  <h1>Blokz Reflex</h1>
 
-    <div class="instructions">
-      <strong>Instructions :</strong><br/>
-      - Clique sur les blocs colorés avant qu'ils disparaissent<br/>
-      - Ne clique jamais sur les blocs gris ❌<br/>
-      - Si tu rates un bloc coloré → tu perds une vie ❤️<br/>
-      - Clique sur "Prêt" pour accéder à la boutique avant de jouer<br/>
-    </div>
+  <div id="auth">
+
+    <h2>Inscription</h2>
+    <form id="signup-form">
+      <input type="email" id="signup-email" placeholder="Email" required />
+      <input type="password" id="signup-password" placeholder="Mot de passe" required />
+      <button type="submit">S'inscrire</button>
+    </form>
+
+    <h2>Connexion</h2>
+    <form id="login-form">
+      <input type="email" id="login-email" placeholder="Email" required />
+      <input type="password" id="login-password" placeholder="Mot de passe" required />
+      <button type="submit">Se connecter</button>
+    </form>
+
+  </div>
+
+  <div id="welcome" style="display:none;">
+    <h2>Bienvenue <span id="user-email"></span></h2>
+    <button id="play-btn">Jouer à Blokz Reflex</button>
+    <button id="logout-btn">Se déconnecter</button>
   </div>
 
   <script>
-    async function startGame() {
-      const username = document.getElementById("username").value.trim();
-      const difficulty = document.getElementById("difficulty").value;
+    const apiUrl = 'http://localhost:3000'; // Change si hébergé ailleurs
 
-      if (!username || !difficulty) {
-        alert("Remplis ton pseudo et la difficulté !");
-        return;
-      }
+    const signupForm = document.getElementById('signup-form');
+    const loginForm = document.getElementById('login-form');
+    const authDiv = document.getElementById('auth');
+    const welcomeDiv = document.getElementById('welcome');
+    const userEmailSpan = document.getElementById('user-email');
+    const logoutBtn = document.getElementById('logout-btn');
+    const playBtn = document.getElementById('play-btn');
 
-      // Login ou création
-      await fetch('/api/login', {
+    signupForm.addEventListener('submit', async e => {
+      e.preventDefault();
+      const email = document.getElementById('signup-email').value;
+      const password = document.getElementById('signup-password').value;
+      const res = await fetch(apiUrl + '/signup', {
         method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ username })
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify({ email, password })
       });
+      const data = await res.json();
+      alert(data.message);
+    });
 
-      // Redirection avec paramètres GET
-      window.location.href = `/game.html?username=${encodeURIComponent(username)}&difficulty=${difficulty}`;
+    loginForm.addEventListener('submit', async e => {
+      e.preventDefault();
+      const email = document.getElementById('login-email').value;
+      const password = document.getElementById('login-password').value;
+      const res = await fetch(apiUrl + '/login', {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify({ email, password })
+      });
+      const data = await res.json();
+      if(data.token) {
+        localStorage.setItem('token', data.token);
+        localStorage.setItem('email', email);
+        showWelcome(email);
+      } else {
+        alert(data.message || 'Erreur de connexion');
+      }
+    });
+
+    logoutBtn.addEventListener('click', () => {
+      localStorage.removeItem('token');
+      localStorage.removeItem('email');
+      authDiv.style.display = 'block';
+      welcomeDiv.style.display = 'none';
+    });
+
+    playBtn.addEventListener('click', () => {
+      alert("Ici, tu lanceras le jeu Blokz Reflex !");
+      // Tu peux rediriger vers une autre page ou afficher le jeu ici
+    });
+
+    function showWelcome(email) {
+      userEmailSpan.textContent = email;
+      authDiv.style.display = 'none';
+      welcomeDiv.style.display = 'block';
     }
+
+    // Au chargement, vérifier si déjà connecté
+    window.onload = () => {
+      const token = localStorage.getItem('token');
+      const email = localStorage.getItem('email');
+      if(token && email) {
+        showWelcome(email);
+      }
+    };
   </script>
 </body>
 </html>
+
