--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   </div>
 
   <script>
-    const apiUrl = 'http://localhost:3000'; // Change si hébergé ailleurs
+    const apiUrl = 'http://localhost:3000'; // Mets ici l'URL de ton backend
 
     const signupForm = document.getElementById('signup-form');
     const loginForm = document.getElementById('login-form');
@@ -66,7 +66,7 @@
         body: JSON.stringify({ email, password })
       });
       const data = await res.json();
-      if(data.token) {
+      if (data.token) {
         localStorage.setItem('token', data.token);
         localStorage.setItem('email', email);
         showWelcome(email);
@@ -83,8 +83,8 @@
     });
 
     playBtn.addEventListener('click', () => {
-      alert("Ici, tu lanceras le jeu Blokz Reflex !");
-      // Tu peux rediriger vers une autre page ou afficher le jeu ici
+      alert('Ici tu peux lancer ton jeu Blokz Reflex !');
+      // Redirection ou affichage du jeu à ajouter ici
     });
 
     function showWelcome(email) {
@@ -93,15 +93,15 @@
       welcomeDiv.style.display = 'block';
     }
 
-    // Au chargement, vérifier si déjà connecté
     window.onload = () => {
       const token = localStorage.getItem('token');
       const email = localStorage.getItem('email');
-      if(token && email) {
+      if (token && email) {
         showWelcome(email);
       }
     };
   </script>
 </body>
 </html>
+
 
